--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One|Knewave');
+body {
+  background: rgb(250, 250, 250);
+}
 
 .frontBanner {
   background-color: rgb(50, 50, 50);;
@@ -62,7 +65,7 @@ a {
 .transitionBanner {
   position: relative;
   width: 100%;
-  height: 390px;
+  height: 290px;
   background: rgb(50, 50, 50);
   line-height: 0;
 }
@@ -76,37 +79,21 @@ a {
   left: 100px;
 }
 .transitionBanner>div {
-  height: 80px;
+  height: 50px;
   width: 100%;
 }
 #d1 {
-  height:70px;
+  height:40px;
   background: rgb(50, 50, 50)
 }
 #d2 {background: rgb(90, 90, 90); position: relative;}
 #d3 {background: rgb(130, 130, 130); position: relative;}
 #d4 {background: rgb(170, 170, 170); position: relative;}
 #d5 {background: rgb(210, 210, 210); position: relative;}
+#d6 {background: rgb(250, 250, 250); position: relative;}
 
-
-
-
-
-.topCardContainer, .botCardContainer{
+.galleryBottom {
+  background: rgb(250, 250, 250);
+  height: 50px;
   width: 100%;
-  color: white;
-  height: 100px;
-}
-.imgCardDisplay {
-  cursor: pointer;
-}
-.imgCardDisplay:focus {
-  width: 100vw;
-}
-.imgCardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: space-between;
-  align-items: center;
 }
