--- a/src/components/EditCard.css
+++ b/src/components/EditCard.css
@@ -1,9 +1,11 @@
 .eCardMain {
-    background: rgb(153, 144, 144);
-    height: 100vh;
+    background: url('../images/photo-wall.jpg') no-repeat center;
+    background-attachment: fixed;
     width: 100%;
+    height: 100vh;
+    position: relative;
 }
-.divH1 {
+.divH1 {z
     width: 100%;
     height: 20vh;
     padding: 5vh 12vw;
@@ -16,7 +18,7 @@
 .eCardBody {
     display: flex;
     justify-content: center;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .inputAndButton {
     width: 30vw;
@@ -70,12 +72,24 @@ textarea:focus, input:focus{
 .uploadImgDiv {
     width: 40%;
     height: 43vh;
-    background: rgb(58, 58, 58);
     min-height: 400px;
     margin-left: 20px;
     border: 20px solid white;
+    position: relative;
+    text-align: center;
+}
+.uploadImgDiv>h1 {
+    font-family: 'Knewave', cursive;
+    font-size: 42pt;
+    color: white;
+    margin-top: 115px;
+    z-index: 10;
+    position: absolute;
 }
 .uploadImgDiv img {
     width: 100%;
     max-height: 100%;
+    position: absolute;
+    z-index: 11;
+    left: 0;
 }
