--- a/src/components/Img.css
+++ b/src/components/Img.css
@@ -43,7 +43,7 @@
     font-family: 'Fjalla One', sans-serif;
     font-size: 20pt;
     background: rgb(250, 250, 250);
-    max-width: calc(100% - 300px);
+    max-width: 700px;
     display: block;
     margin: 0 auto;
     border-bottom-left-radius: 30px;
