--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@ body {
   background-size: cover;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
 }
 .navBar li {
   color: white;
@@ -58,7 +61,18 @@ a {
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.397);
 }
-
+.logoUnder {
+  font-family: 'Knewave', cursive;
+  padding: 30px 60px;
+  font-size: 32pt;
+  color: white;
+}
+.downArrow {
+  font-size: 75pt;
+  color: white;
+  position: absolute;
+  bottom: 50px;
+}
 .transitionBanner {
   position: relative;
   width: 100%;
@@ -83,7 +97,6 @@ a {
   height:30px;
   background: rgb(50, 50, 50)
 }
-
 #d2 {background: rgb(90, 90, 90); position: relative;}
 #d3 {background: rgb(130, 130, 130); position: relative;}
 #d4 {background: rgb(170, 170, 170); position: relative;}
