--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -1,6 +1,6 @@
 .galleryContainer {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 20px);
     position: relative;
 }
 .galleryContainer>button {
