--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 .frontBanner {
-  background-color: rgb(50, 50, 50);;
+  background-color: rgb(50, 50, 50);
   width: 100%;
   height: 100vh;
   padding-bottom: 10px;
